--- a/admin/payments.html
+++ b/admin/payments.html
@@ -7,40 +7,203 @@
     <title>Payment Management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/payment.css">
 </head>
 
 <body>
-    <div class="container mt-5">
-        <h2>Payment Management</h2>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Transaction ID</th>
-                    <th>User</th>
-                    <th>Amount</th>
-                    <th>Status</th>
-                    <th>Date</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>TXN12345</td>
-                    <td>JohnDoe</td>
-                    <td>$200</td>
-                    <td><span class="badge bg-success">Completed</span></td>
-                    <td>2024-08-30</td>
-                    <td>
-                        <button class="btn btn-sm btn-info">View</button>
-                        <button class="btn btn-sm btn-danger">Refund</button>
-                    </td>
-                </tr>
-                <!-- More transaction rows here -->
-            </tbody>
-        </table>
+
+    <!-- Header for Small Screens -->
+    <div class="header shadow">
+        Payment Management
+        <i class="fa fa-bars toggle-btn" id="toggle-btn"></i>
+    </div>
+
+    <!-- Sidebar -->
+    <div class="sidebar" id="sidebar">
+        <a class="navbar-brand" href="#">Admin Dashboard</a>
+        <nav class="nav flex-column">
+            <a class="nav-link" href="dashboard.html">Dashboard</a>
+            <a class="nav-link" href="users.html">User Management</a>
+            <a class="nav-link" href="tasks.html">Task Management</a>
+            <a class="nav-link active" href="payments.html">Payment Management</a>
+            <a class="nav-link" href="content.html">Content Management</a>
+            <a class="nav-link" href="reports.html">Reports & Analytics</a>
+            <a class="nav-link" href="settings.html">Settings</a>
+            <a class="nav-link" href="support.html">Support Management</a>
+            <a class="nav-link" href="audit.html">Audit Logs</a>
+            <a class="nav-link" href="access_control.html">Access Control</a>
+        </nav>
+    </div>
+
+    <!-- Main Content -->
+    <div class="content" id="content">
+        <h1 class="mt-4">Payment Management</h1>
+
+        <!-- Payment History Section -->
+        <div class="payment-section">
+            <h2>Payment History</h2>
+            <!-- Filter Section for Payment History -->
+            <div class="filter-section">
+                <input type="text" id="search-user" class="form-control" placeholder="Search User">
+                <select id="filter-task-type" class="form-select">
+                    <option value="">All Task Types</option>
+                    <option value="Task Payment">Task Payment</option>
+                    <option value="Withdrawal">Withdrawal</option>
+                    <option value="Refund">Refund</option>
+                </select>
+                <select id="filter-status" class="form-select">
+                    <option value="">All Statuses</option>
+                    <option value="Completed">Completed</option>
+                    <option value="Pending">Pending</option>
+                    <option value="Refunded">Refunded</option>
+                </select>
+            </div>
+
+            <div class="table-container">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Transaction ID</th>
+                            <th>Amount</th>
+                            <th>Date</th>
+                            <th>Type</th>
+                            <th>Status</th>
+                            <th>User</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="payment-history-body">
+                        <!-- Payment history rows will be dynamically populated here -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Payouts Section -->
+        <div class="payment-section">
+            <h2>Payouts</h2>
+            <!-- Filter Section for Payouts -->
+            <div class="filter-section">
+                <input type="text" id="search-payout-user" class="form-control" placeholder="Search User">
+                <input type="date" id="filter-date" class="form-control">
+            </div>
+            <div class="table-container">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Payout ID</th>
+                            <th>Amount</th>
+                            <th>Requested By</th>
+                            <th>Status</th>
+                            <th>Date</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="payouts-body">
+                        <!-- Payout requests will be dynamically populated here -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Financial Reports Section -->
+        <div class="payment-section">
+            <h2>Financial Reports</h2>
+            <p>Download detailed financial reports, including monthly revenue, expenses, and more.</p>
+            <button class="btn-download">Download Monthly Report (PDF)</button>
+            <button class="btn-download">Download Yearly Report (Excel)</button>
+        </div>
+
+        <!-- Modals for Viewing Details -->
+        <div class="modal fade" id="paymentDetailsModal" tabindex="-1" aria-labelledby="paymentDetailsModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="paymentDetailsModalLabel">Payment Details</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p><strong>Transaction ID:</strong> <span id="transaction-id"></span></p>
+                        <p><strong>Amount:</strong> <span id="transaction-amount"></span></p>
+                        <p><strong>Type:</strong> <span id="transaction-type"></span></p>
+                        <p><strong>Status:</strong> <span id="transaction-status"></span></p>
+                        <p><strong>Date:</strong> <span id="transaction-date"></span></p>
+                        <p><strong>User:</strong> <span id="transaction-user"></span></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Payout Details Modal -->
+        <div class="modal fade" id="payoutDetailsModal" tabindex="-1" aria-labelledby="payoutDetailsModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="payoutDetailsModalLabel">Payout Details</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p><strong>Payout ID:</strong> <span id="payout-id"></span></p>
+                        <p><strong>Total Approved Amount:</strong> $<span id="total-withdrawal"></span></p>
+                        <h6>Tasks Approved for Withdrawal</h6>
+                        <ul id="task-list" class="list-group task-list-group">
+                            <!-- Task details will be dynamically populated here -->
+                        </ul>
+                        <button class="btn-update" id="approve-payout-btn">Update Approved Amount</button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Refund Modal -->
+        <div class="modal fade" id="refundModal" tabindex="-1" aria-labelledby="refundModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="refundModalLabel">Process Refund</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p><strong>Transaction ID:</strong> <span id="refund-transaction-id"></span></p>
+                        <p><strong>Amount:</strong> <input type="number" id="refund-amount" class="form-control"
+                                value="0.00"></p>
+                        <p><strong>Reason for Refund:</strong></p>
+                        <textarea id="refund-reason" class="form-control" rows="3"></textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" id="confirm-refund-btn">Confirm Refund</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Payout Details Modal -->
+
+
+        <!-- Footer -->
+        <div class="footer mt-4">
+            <p>&copy; 2024 Admin Dashboard. All rights reserved. |
+                <a href="#">Privacy Policy</a> |
+                <a href="#">Terms of Service</a> |
+                <a href="#">Contact Us</a>
+            </p>
+        </div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./js/header.js"></script>
+    <script src="./js/payment.js"></script>
 </body>
 
 </html>
