--- a/admin/tasks.html
+++ b/admin/tasks.html
@@ -7,41 +7,117 @@
     <title>Task Management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/task.css">
 </head>
 
 <body>
-    <div class="container mt-5">
-        <h2>Task Management</h2>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Task ID</th>
-                    <th>Task Name</th>
-                    <th>Assigned To</th>
-                    <th>Status</th>
-                    <th>Deadline</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1001</td>
-                    <td>Research Paper on AI</td>
-                    <td>JaneDoe</td>
-                    <td><span class="badge bg-warning">Pending</span></td>
-                    <td>2024-09-10</td>
-                    <td>
-                        <button class="btn btn-sm btn-primary">Edit</button>
-                        <button class="btn btn-sm btn-success">Approve</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                    </td>
-                </tr>
-                <!-- More task rows here -->
-            </tbody>
-        </table>
+
+    <!-- Header for Small Screens -->
+    <div class="header shadow">
+        Task Management
+        <i class="fa fa-bars toggle-btn" id="toggle-btn"></i>
+    </div>
+
+    <!-- Sidebar -->
+    <div class="sidebar" id="sidebar">
+        <a class="navbar-brand" href="#">Admin Dashboard</a>
+        <nav class="nav flex-column">
+            <a class="nav-link" href="dashboard.html">Dashboard</a>
+            <a class="nav-link" href="users.html">User Management</a>
+            <a class="nav-link active" href="tasks.html">Task Management</a>
+            <a class="nav-link" href="payments.html">Payment Management</a>
+            <a class="nav-link" href="content.html">Content Management</a>
+            <a class="nav-link" href="reports.html">Reports & Analytics</a>
+            <a class="nav-link" href="settings.html">Settings</a>
+            <a class="nav-link" href="support.html">Support Management</a>
+            <a class="nav-link" href="audit.html">Audit Logs</a>
+            <a class="nav-link" href="access_control.html">Access Control</a>
+        </nav>
+    </div>
+
+    <!-- Main Content -->
+    <div class="content" id="content">
+        <h1 class="mt-4">Task Management</h1>
+
+        <!-- Task Filter Section -->
+        <div class="task-filter row g-3 align-items-center">
+            <div class="col-auto">
+                <input type="text" id="search-task" class="form-control" placeholder="Search task...">
+            </div>
+            <div class="col-auto">
+                <select id="filter-status" class="form-select">
+                    <option value="">All Statuses</option>
+                    <option value="available">Available</option>
+                    <option value="pending">Pending</option>
+                    <option value="approved">Approved</option>
+                    <option value="completed">Completed</option>
+                </select>
+            </div>
+        </div>
+
+        <!-- Task List Section -->
+        <div class="task-list mt-4">
+            <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Task Name</th>
+                            <th>Status</th>
+                            <th>Assigned To</th>
+                            <th>Deadline</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="task-list-body">
+                        <!-- Example Task Rows (populated dynamically) -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Task Details Modal -->
+        <div class="modal fade" id="taskDetailModal" tabindex="-1" aria-labelledby="taskDetailModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="taskDetailModalLabel">Task Details</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p><strong>Task Name:</strong> <span id="task-name"></span></p>
+                        <p><strong>Created By:</strong> <span id="task-created-by"></span></p>
+                        <p><strong>Assigned To:</strong> <span id="task-assigned-to"></span></p>
+                        <p><strong>Status:</strong> <span id="task-status"></span></p>
+                        <p><strong>Deadline:</strong> <span id="task-deadline"></span></p>
+                        <p><strong>Communications:</strong></p>
+                        <ul id="task-communications" class="list-group">
+                            <!-- Communication history will be dynamically populated here -->
+                        </ul>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <div class="footer mt-4">
+            <p>&copy; 2024 Admin Dashboard. All rights reserved. |
+                <a href="#">Privacy Policy</a> |
+                <a href="#">Terms of Service</a> |
+                <a href="#">Contact Us</a>
+            </p>
+        </div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/task.js"></script>
+    <script src="./js/header.js"></script>
 </body>
 
 </html>
