--- a/admin/users.html
+++ b/admin/users.html
@@ -9,9 +9,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/users.css">
-    <style>
-        
-    </style>
 </head>
 
 <body>
@@ -41,21 +38,122 @@
 
     <!-- Main Content -->
     <div class="content" id="content">
-        <h1>Users</h1>
+        <h1 class="mt-4">User Management</h1>
+
+        <!-- Search and Filter Section -->
+        <div class="search-filter row g-3 align-items-center">
+            <div class="col-auto">
+                <input type="text" id="search-user" class="form-control" placeholder="Search user...">
+            </div>
+            <div class="col-auto">
+                <select id="filter-role" class="form-select">
+                    <option value="">All Roles</option>
+                    <option value="writer">Writer</option>
+                    <option value="client">Client</option>
+                    <option value="admin">Admin</option>
+                </select>
+            </div>
+            <div class="col-auto">
+                <select id="filter-status" class="form-select">
+                    <option value="">All Statuses</option>
+                    <option value="active">Active</option>
+                    <option value="inactive">Inactive</option>
+                </select>
+            </div>
+        </div>
+
+        <!-- User List Section -->
+        <div class="user-list  mt-4">
+            <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Username</th>
+                            <th>Role</th>
+                            <th>Status</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="user-list-body">
+                        <!-- Example User Rows -->
+                        <tr>
+                            <td>john_doe</td>
+                            <td>Writer</td>
+                            <td>Active</td>
+                            <td class="action-buttons">
+                                <i class="fa fa-eye view-user" title="View Profile" data-bs-toggle="modal"
+                                    data-bs-target="#userProfileModal" data-user-id="2"></i>
+                                <i class="fa fa-pencil-alt" title="Edit"></i>
+                                <i class="fa fa-key" title="Reset Password"></i>
+                                <i class="fa fa-toggle-on" title="Deactivate"></i>
+                                <i class="fa fa-trash" title="Delete"></i>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>jane_smith</td>
+                            <td>Client</td>
+                            <td>Inactive</td>
+                            <td class="action-buttons">
+                                <i class="fa fa-eye view-user" title="View Profile" data-bs-toggle="modal"
+                                    data-bs-target="#userProfileModal" data-user-id="1"></i>
+                                <i class="fa fa-pencil-alt" title="Edit"></i>
+                                <i class="fa fa-key" title="Reset Password"></i>
+                                <i class="fa fa-toggle-on" title="Deactivate"></i>
+                                <i class="fa fa-trash" title="Delete"></i>
+                            </td>
+                        </tr>
+                        <!-- More rows can be dynamically added -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- User Profile Modal -->
+        <div class="modal fade" id="userProfileModal" tabindex="-1" aria-labelledby="userProfileModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="userProfileModalLabel">User Profile</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div id="user-profile-details">
+                            <!-- User details will be dynamically populated here -->
+                            <p><strong>Username:</strong> <span id="profile-username"></span></p>
+                            <p><strong>Email:</strong> <span id="profile-email"></span></p>
+                            <p><strong>Role:</strong> <span id="profile-role"></span></p>
+                            <p><strong>Status:</strong> <span id="profile-status"></span></p>
+                            <p><strong>Activity History:</strong> <span id="profile-activity"></span></p>
+                            <p><strong>Completed Tasks:</strong> <span id="profile-tasks"></span></p>
+                            <p><strong>Pending Tasks:</strong> <span id="profile-tasks"></span></p>
+                            <p><strong>Cancelled Tasks:</strong> <span id="profile-tasks"></span></p>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Footer -->
-        <div class="footer">
-            <p>&copy; 2024 Admin Dashboard. All rights reserved. | 
-                <a href="#">Privacy Policy</a> | 
-                <a href="#">Terms of Service</a> | 
+        <div class="footer mt-4">
+            <p>&copy; 2024 Admin Dashboard. All rights reserved. |
+                <a href="#">Privacy Policy</a> |
+                <a href="#">Terms of Service</a> |
                 <a href="#">Contact Us</a>
             </p>
         </div>
 
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
     <script src="js/header.js"></script>
+    <script src="js/users.js"></script> <!-- Separate JS file for user management functionalities -->
 </body>
 
 </html>
